qp-financial/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-financial-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: financial.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: qp-financial
          servicePort: 8888
